<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">capstone</string>
    <string name="intro_text">Welcome to the Mutibo app! A place for solving movie puzzles.</string>
    <string name="action_settings">Settings</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="register_intro">Register for Mutibo!</string>
    <string name="register_username">Enter your username</string>
    <string name="register_password">Please enter your password</string>
    <string name="register_password2">Please validate your password</string>
    <string name="register_submit">Register</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="login_intro">Log into the Mutibo App!</string>
    <string name="login_username">Enter your Username</string>
    <string name="login_password">Enter your Password</string>
    <string name="login_submit">Login</string>
    <string name="title_activity_home_page">HomePageActivity</string>

</resources>
